syntax = "proto3";

package chat;

option csharp_namespace = "Chat.Proto";

// 認証サービス
service AuthService {
  // ログイン
  rpc Login(LoginRequest) returns (LoginResponse);

  // ログアウト
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // トークン検証
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // ユーザー登録
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  User user = 3;
  string error_message = 4;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string display_name = 3;
}

message RegisterResponse {
  bool success = 1;
  User user = 2;
  string error_message = 3;
}

message User {
  string id = 1;
  string username = 2;
  string display_name = 3;
  int64 created_at = 4;
  bool is_active = 5;
}
