syntax = "proto3";

package chat;

option csharp_namespace = "Chat.Proto";

// チャンネル管理サービス
service ChannelService {
  // チャンネル作成
  rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse);

  // チャンネル一覧取得
  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse);

  // チャンネル詳細取得
  rpc GetChannel(GetChannelRequest) returns (GetChannelResponse);

  // チャンネル更新
  rpc UpdateChannel(UpdateChannelRequest) returns (UpdateChannelResponse);

  // チャンネル削除
  rpc DeleteChannel(DeleteChannelRequest) returns (DeleteChannelResponse);

  // チャンネルにメンバー追加
  rpc AddChannelMember(AddChannelMemberRequest) returns (AddChannelMemberResponse);

  // チャンネルからメンバー削除
  rpc RemoveChannelMember(RemoveChannelMemberRequest) returns (RemoveChannelMemberResponse);
}

message Channel {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  string created_by = 5;
  repeated string member_ids = 6;
  bool is_private = 7;
}

message CreateChannelRequest {
  string name = 1;
  string description = 2;
  bool is_private = 3;
  string token = 4;
}

message CreateChannelResponse {
  bool success = 1;
  Channel channel = 2;
  string error_message = 3;
}

message ListChannelsRequest {
  string token = 1;
}

message ListChannelsResponse {
  repeated Channel channels = 1;
}

message GetChannelRequest {
  string channel_id = 1;
  string token = 2;
}

message GetChannelResponse {
  bool success = 1;
  Channel channel = 2;
  string error_message = 3;
}

message UpdateChannelRequest {
  string channel_id = 1;
  string name = 2;
  string description = 3;
  string token = 4;
}

message UpdateChannelResponse {
  bool success = 1;
  Channel channel = 2;
  string error_message = 3;
}

message DeleteChannelRequest {
  string channel_id = 1;
  string token = 2;
}

message DeleteChannelResponse {
  bool success = 1;
  string error_message = 2;
}

message AddChannelMemberRequest {
  string channel_id = 1;
  string user_id = 2;
  string token = 3;
}

message AddChannelMemberResponse {
  bool success = 1;
  string error_message = 2;
}

message RemoveChannelMemberRequest {
  string channel_id = 1;
  string user_id = 2;
  string token = 3;
}

message RemoveChannelMemberResponse {
  bool success = 1;
  string error_message = 2;
}
