syntax = "proto3";

package chat;

option csharp_namespace = "Chat.Proto";

// メッセージングサービス
service MessageService {
  // メッセージ送信
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  // メッセージ一覧取得
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);

  // メッセージストリーム購読
  rpc SubscribeMessages(SubscribeMessagesRequest) returns (stream MessageEvent);

  // メッセージ削除
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message Message {
  string id = 1;
  string channel_id = 2;
  string user_id = 3;
  string username = 4;
  string content = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message SendMessageRequest {
  string channel_id = 1;
  string content = 2;
  string token = 3;
}

message SendMessageResponse {
  bool success = 1;
  Message message = 2;
  string error_message = 3;
}

message ListMessagesRequest {
  string channel_id = 1;
  int32 limit = 2;
  int64 before = 3;
  string token = 4;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeMessagesRequest {
  string channel_id = 1;
  string token = 2;
}

message MessageEvent {
  enum EventType {
    MESSAGE_SENT = 0;
    MESSAGE_DELETED = 1;
  }

  EventType event_type = 1;
  Message message = 2;
}

message DeleteMessageRequest {
  string message_id = 1;
  string token = 2;
}

message DeleteMessageResponse {
  bool success = 1;
  string error_message = 2;
}
