syntax = "proto3";

package chat;

option csharp_namespace = "Chat.Proto";

import "auth.proto";

// ユーザー管理サービス
service UserService {
  // ユーザー一覧取得
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // ユーザー詳細取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // ユーザー更新
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // ユーザー削除
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // ユーザーのアクティブ状態変更
  rpc SetUserActive(SetUserActiveRequest) returns (SetUserActiveResponse);
}

message ListUsersRequest {
  string token = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string user_id = 1;
  string token = 2;
}

message GetUserResponse {
  bool success = 1;
  User user = 2;
  string error_message = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  string display_name = 2;
  string token = 3;
}

message UpdateUserResponse {
  bool success = 1;
  User user = 2;
  string error_message = 3;
}

message DeleteUserRequest {
  string user_id = 1;
  string token = 2;
}

message DeleteUserResponse {
  bool success = 1;
  string error_message = 2;
}

message SetUserActiveRequest {
  string user_id = 1;
  bool is_active = 2;
  string token = 3;
}

message SetUserActiveResponse {
  bool success = 1;
  string error_message = 2;
}
